--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: node_js
 node_js:
   - lts/*
 install:
-  - npm ci
+  - npm install
 script:
-  - npm install vuepress
   - npm run docs:build
 deploy:
   provider: pages
